# WoodenCannon

./: .gitignore  CMakeLists.txt  Makefile  Makefile.mak  README.md  Theory.md  build.cmd  build.sh
align_test/: Makefile.mak
inc/: wc.h  wc_config.h  wc_core.h  wc_functions.h  wc_inheritance.h  wc_list.h  wc_list_gnu.h  wc_list_msc_1900.h  wc_list_msc_1910.h  wc_list_msc_1914.h  wc_member.h  wc_stitcher.h  wc_vector.h  wc_vector_gnu.h  wc_vector_msc_1800.h  wc_vector_msc_1900.h  wc_vector_msc_1910.h  wc_vector_msc_1914.h  wc_xutility_msc.h  wc_xutility_msc_1914.h
src/: CMakeLists.txt  Serializer.cpp  Serializer.h  config.cpp  test.cpp  wc.h  wc_buffer.cpp  wc_buffer.h  wc_config.h  wc_core.cpp  wc_core.h  wc_functions.h  wc_inheritance.h  wc_list.h  wc_list_gnuc.h  wc_list_msc.h  wc_member.h  wc_network.cpp  wc_network.h  wc_new.cpp  wc_stl.h  wc_vector.h  wc_vector_gnu.h  wc_vector_msc_1910.h
test_src/: CMakeLists.txt  MyClasses.cpp  MyClasses.h  c_style_class.cpp  c_style_class.h  complex_type.cpp  complex_type.h  msvc_vector_test.cpp  responsible_member.cpp  responsible_member.h  test.cpp  test_diamond.cpp  test_diamond.h  test_virtual.cpp  test_virtual.h
windows/: windows.sln
windows/test/: test.vcxproj  test.vcxproj.filters
windows/wc/: wc.vcxproj  wc.vcxproj.filters
